tests/build/cases/ui_node/missing_delegate_expr.stderr
error: expected `delegate = <expr>`
 --> cases/ui_node/missing_delegate_expr.rs:6:11
  |
6 | #[ui_node(delegate)]
  |           ^^^^^^^^

error: expected `delegate = <expr>`
  --> cases/ui_node/missing_delegate_expr.rs:16:20
   |
16 | #[ui_node(delegate =)]
   |                    ^

warning: unused import: `UiNode`
 --> cases/ui_node/missing_delegate_expr.rs:1:37
  |
1 | use zero_ui::prelude_wgt::{ui_node, UiNode};
  |                                     ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
